# charisma_check

./: .gitignore  Cargo.toml  README.md  loot.txt
src/: main.rs
src/datums/: loot_record.rs  mod.rs  user_record.rs  users.rs
src/errors/: error.rs  result.rs
src/processors/: data_manager.rs  handler.rs  mod.rs  scorer.rs
src/serializers/: loot_serializer.rs  mod.rs  serializer.rs  user_serializer.rs
src/serializers/drivers/: csv_driver.rs  driver.rs  mod.rs
