[package]
name = "saving_throw"
version = "0.1.0"
authors = ["Ryan Lanigan <ryanclanigan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
rand = "0.7.3"
